--- a/.github/workflows/Nightly.yaml
+++ b/.github/workflows/Nightly.yaml
@@ -10,30 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     if: github.actor == 'Sirherobrine23'
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKER_USER }}
+          username: sirherobrine23
           password: ${{ secrets.DOCKER_PASS }}
+      - uses: actions/checkout@master
 
-      - name: checkout
-        uses: actions/checkout@master
-
-      - name: Build and push
+      - name: Build and Push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: |
-            sirherobrine23/http-injector_server:latest
-            sirherobrine23/http-injector_server:${{ github.run_id }}
+            sirherobrine23/http-injector_server:nightly
             "linux/amd64","linux/arm64","linux/386","linux/arm/v7","linux/arm/v6"
-
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
