--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -1,10 +1,10 @@
-name: Nightly Image Publish
+name: Stable Image Publish
 on:
   push:
     branches:
       - stable
   schedule:
-    - cron: 0 0 * * */1
+    - cron: 0 0 * * */2
 jobs:
   base:
     runs-on: ubuntu-latest
@@ -19,7 +19,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKER_USER }}
+          username: sirherobrine23
           password: ${{ secrets.DOCKER_PASS }}
 
       - name: checkout
