--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -33,7 +33,7 @@ jobs:
           tags: |
             sirherobrine23/http-injector_server:latest
             sirherobrine23/http-injector_server:${{ github.run_id }}
-            "linux/amd64","linux/arm64","linux/386","linux/arm/v7","linux/arm/v6"
+            platforms: "linux/amd64","linux/arm64","linux/386","linux/arm/v7","linux/arm/v6"
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
