--- a/.github/workflows/Nightly.yaml
+++ b/.github/workflows/Nightly.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   base:
     runs-on: ubuntu-latest
+    if: github.actor == 'Sirherobrine23'
     steps:
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
@@ -24,4 +25,4 @@ jobs:
           push: true
           tags: |
             sirherobrine23/http-injector_server:nightly
-            "linux/amd64","linux/arm64","linux/386","linux/arm/v7","linux/arm/v6"
+            platforms: "linux/amd64","linux/arm64","linux/386","linux/arm/v7","linux/arm/v6"
