--- a/.github/workflows/Nightly.yaml
+++ b/.github/workflows/Nightly.yaml
@@ -25,4 +25,4 @@ jobs:
           push: true
           tags: |
             sirherobrine23/http-injector_server:nightly
-          platforms: linux/amd64,linux/arm64,linux/386
+          platforms: linux/amd64,linux/arm64
