--- a/.github/workflows/stable.yaml
+++ b/.github/workflows/stable.yaml
@@ -32,7 +32,7 @@ jobs:
           push: true
           tags: |
             sirherobrine23/http-injector_server:latest
-            sirherobrine23/http-injector_server:${{ github.run_id }}
+            sirherobrine23/http-injector_server:${{ github.sha }}
           platforms: "linux/amd64","linux/arm64","linux/386","linux/arm/v7","linux/arm/v6"
 
       - name: Image digest
