--- a/.github/workflows/nightly_github.yml
+++ b/.github/workflows/nightly_github.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.DOCKER_PASS }}
+          password: ${{ secrets.DOCKER_PASS_GITHUB }}
       - uses: actions/checkout@master
 
       - name: Build and Push
